--- a/src/main/resources/templates/admin-list-of-games.html
+++ b/src/main/resources/templates/admin-list-of-games.html
@@ -55,7 +55,7 @@
     </tr>
 </table>
 <br>
-    <form th:action="@{/admin/game_add.html}">
+    <form action="/admin/add-new-game">
         <button type="submit">Добавить новую игру</button>
     </form>
 
