--- a/src/main/resources/templates/admin-add-new-game.html
+++ b/src/main/resources/templates/admin-add-new-game.html
@@ -13,7 +13,7 @@
     <button type="submit">Назад к списку игр</button>
 </form>
 <br>
-<form method="post" action="/admin/games">
+<form method="post" action="/admin/add-new-game">
     <label>Название:
         <input required style="width: 400px" name="name" placeholder="The Last of Us">
     </label>
@@ -53,8 +53,7 @@
     <br>
     <br>
     <label>Описание:
-        <textarea style="width: 400px; height: 100px" name="description" th:text="${game.getDescription()}">
-            </textarea>
+        <textarea style="width: 400px; height: 100px" name="description" placeholder="Описание игры"></textarea>
     </label>
     <br>
     <br>
