--- a/src/main/resources/templates/admin-change-game.html
+++ b/src/main/resources/templates/admin-change-game.html
@@ -56,8 +56,7 @@
     <br>
     <br>
     <label>Описание:
-        <textarea style="width: 400px; height: 100px" name="description" th:text="${gameDto.getDescription()}">
-            </textarea>
+        <textarea style="width: 400px; height: 100px" name="description" th:text="${gameDto.getDescription()}"></textarea>
     </label>
     <br>
     <br>
