--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -81,11 +81,11 @@
                         <div class="header-bottom-set dropdown">
                             <button class="dropdown-toggle header-action-btn" data-bs-toggle="dropdown"><i
                                     class="icon-user"></i></button>
-<!--                            <ul class="dropdown-menu dropdown-menu-right">-->
-<!--                                <li><a class="dropdown-item" href="/my-account">Мой аккаунт</a></li>-->
-<!--                                <li><a class="dropdown-item" href="/my-account">Войти</a></li>-->
-<!--                                <li><a class="dropdown-item" href="/my-account/logout">Выйти</a></li>-->
-<!--                            </ul>-->
+                            <ul class="dropdown-menu dropdown-menu-right">
+                                <li><a class="dropdown-item" href="/my-account">Мой аккаунт</a></li>
+                                <li><a class="dropdown-item" href="/my-account">Войти</a></li>
+                                <li><a class="dropdown-item" href="/my-account/logout">Выйти</a></li>
+                            </ul>
                         </div>
                         <!-- Single Wedge End -->
                         <a href="/cart" class="header-action-btn header-action-btn-cart">
@@ -211,53 +211,85 @@
 </div>
 <!-- Header Area End  -->
 
-    <!-- login area start -->
-    <div class="login-register-area pt-100px pb-100px">
+
+
+    <!-- Cart Area Start -->
+    <div class="cart-main-area pt-100px pb-100px">
         <div class="container">
+            <h3 class="cart-page-title">Your cart items</h3>
             <div class="row">
-                <div class="col-lg-7 col-md-12 ml-auto mr-auto">
-                    <div class="login-register-wrapper">
-                        <div class="login-register-tab-list nav">
-                            <a class="active" data-bs-toggle="tab" href="#lg1">
-                                <h4>Вход</h4>
-                            </a>
-                            <a data-bs-toggle="tab" href="#lg2">
-                                <h4>Регистрация</h4>
-                            </a>
-                        </div>
-                        <div class="tab-content">
-                            <div id="lg1" class="tab-pane active">
-                                <div class="login-form-container">
-                                    <div class="login-register-form">
-                                        <form action="/sign-in" method="post">
-                                            <input type="text" name="email" placeholder="E-mail" />
-                                            <input type="password" name="password" placeholder="Пароль" />
-                                            <div class="button-box">
-                                                <div class="login-toggle-btn">
-                                                    <input type="checkbox" />
-                                                    <a class="flote-none" href="javascript:void(0)">Запомнить меня</a>
-                                                    <a href="#">Забыли пароль?</a>
-                                                </div>
-                                                <button type="submit"><span>Войти</span></button>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                    <form action="#">
+                        <div class="table-content table-responsive cart-table-content">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Постер</th>
+                                        <th>Название</th>
+                                        <th>Цена за штуку</th>
+                                        <th>Количество</th>
+                                        <th>Сумма</th>
+                                        <th>Действия</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                <th:block th:each="item: ${order}"> <form>
+                                    <tr>
+                                        <td class="product-thumbnail">
+                                            <a th:href="@{/games/gamepage/{id}(id=${item.getKey().id})}"><img class="img-responsive ml-3" th:src="@{/images/product-image/zoom-image/{fileName}(fileName=${item.getKey().poster})}" alt="" /></a>
+                                        </td>
+                                        <td class="product-name" ><a th:href="@{/games/gamepage/{id}(id=${item.getKey().id})}" th:text="${item.getKey().name}">Product Name</a></td>
+                                        <td class="product-price-cart" th:text="${item.getKey().price} + ' руб.'"><span class="amount">$60.00</span></td>
+                                        <td class="product-quantity">
+                                            <div class="cart-plus-minus">
+                                                <input class="cart-plus-minus-box" type="text" name="qtybutton" th:value="${item.getValue()}" />
                                             </div>
-                                        </form>
+                                        </td>
+                                        <td class="product-subtotal" th:text="${item.getKey().price.multiply(item.getValue())}">$70.00</td>
+                                        <td class="product-remove">
+                                                <label>
+                                                    <input type="text" name="strGameId" th:value="${item.getKey().id}" hidden>
+                                                    <a href="#"><button formaction="/cart/change-item-value" formmethod="post" type="submit"><i class="icon-pencil"></i></button></a>
+                                                    <a href="#"><button formaction="/cart/remove-item" formmethod="post" type="submit"><i class="icon-close"></i></button></a>
+                                                </label>
+                                        </td>
+                                    </tr>
+                                </form>
+                                </th:block>
+
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="cart-shiping-update-wrapper">
+                                    <div class="cart-shiping-update">
+                                        <a href="/games">Продолжить покупки</a>
                                     </div>
+                   <!--                 <div class="cart-clear">
+                                        <button>Update Shopping Cart</button>
+                                        <a href="#">Clear Shopping Cart</a>
+                                    </div>-->
                                 </div>
                             </div>
-                            <div id="lg2" class="tab-pane">
-                                <div class="login-form-container">
-                                    <div class="login-register-form">
-                                        <form action="/sign-up" method="post">
-                                            <input type="text" name="firstName" placeholder="Имя" />
-                                            <input type="text" name="lastName" placeholder="Фамилия" />
-                                            <input type="email" name="email" placeholder="E-mail"  />
-                                            <input type="password" name="password" placeholder="Пароль" />
-                                            <div class="button-box">
-                                                <button type="submit"><span>Регистрация</span></button>
-                                            </div>
-                                        </form>
-                                    </div>
+                        </div>
+                    </form>
+                    <div class="row">
+                        <div style="margin-left: auto" class="col-lg-4 col-md-12 mt-md-30px">
+                            <div class="grand-totall">
+                   <!--             <div class="title-wrap">
+                                    <h4 class="cart-bottom-title section-bg-gary-cart">Итого</h4>
                                 </div>
+                                <h5>Total products <span>$260.00</span></h5>
+                                <div class="total-shipping">
+                                    <h5>Total shipping</h5>
+                                    <ul>
+                                        <li><input type="checkbox" /> Standard <span>$20.00</span></li>
+                                        <li><input type="checkbox" /> Express <span>$30.00</span></li>
+                                    </ul>
+                                </div>-->
+                                <h4 class="grand-totall-title">Итого <span th:text="${totalSum}"></span></h4>
+                                <a href="/cart/payment">Оплатить</a>
                             </div>
                         </div>
                     </div>
@@ -265,7 +297,7 @@
             </div>
         </div>
     </div>
-    <!-- login area end -->
+    <!-- Cart Area End -->
 
 <!-- Footer Area Start -->
 <div class="footer-area">
@@ -311,6 +343,7 @@
 
 <!-- Main Js -->
 <script th:src="@{/js/main.js}"></script>
+
 </body>
 
 </html>
