--- a/src/main/resources/templates/admin-list-of-games.html
+++ b/src/main/resources/templates/admin-list-of-games.html
@@ -25,6 +25,10 @@
 
 <body>
 <h2>Список всех игр</h2>
+<form action="/admin/add-new-game">
+    <button type="submit">Добавить новую игру</button>
+</form>
+<br>
 <table>
     <tr>
         <th>ID</th>
@@ -38,27 +42,20 @@
     <tr th:each="g: ${games}">
         <td th:text="${g.id}"></td>
         <td th:text="${g.name}"></td>
-        <td th:text="${g.price} + ${#strings.escapeXml(' $')}"></td>
+        <td th:text="${g.price} + ' руб.'"></td>
         <td th:text="${g.platforms}"></td>
         <td th:text="${g.developer}"></td>
-        <!--<td th:text="${g.publisher}"></td> -->
         <td th:text="${{g.releaseDate}}"></td>
         <td>
-            <form method="post" th:action="@{/admin/games/{id}/delete(id=${g.id})}">
-                <input type="submit" value="Удалить">
-            </form>
-            <!--            <button th:href="@{/games/{id}(id=${g.id})}" name="Подробнее"></button>-->
             <form th:action="@{/admin/games/{id}/details(id=${g.id})}">
                 <button type="submit">Подробнее</button>
+            </form>
+            <form method="post" th:action="@{/admin/games/{id}/delete(id=${g.id})}">
+                <input type="submit" value="Удалить">
             </form>
         </td>
     </tr>
 </table>
 <br>
-    <form action="/admin/add-new-game">
-        <button type="submit">Добавить новую игру</button>
-    </form>
-
-
 </body>
 </html>
