--- a/src/main/resources/templates/admin-list-of-games.html
+++ b/src/main/resources/templates/admin-list-of-games.html
@@ -40,17 +40,17 @@
         <th>Действия</th>
     </tr>
     <tr th:each="g: ${games}">
-        <td th:text="${g.id}"></td>
+        <td th:text="${g.getGameId}"></td>
         <td th:text="${g.name}"></td>
         <td th:text="${g.price} + ' руб.'"></td>
         <td th:text="${g.platforms}"></td>
         <td th:text="${g.developer}"></td>
         <td th:text="${{g.releaseDate}}"></td>
         <td>
-            <form th:action="@{/admin/games/{id}/details(id=${g.id})}">
+            <form th:action="@{/admin/games/{id}/details(id=${g.getGameId})}">
                 <button type="submit">Подробнее</button>
             </form>
-            <form method="post" th:action="@{/admin/games/{id}/delete(id=${g.id})}">
+            <form method="post" th:action="@{/admin/games/{id}/delete(id=${g.getGameId})}">
                 <input type="submit" value="Удалить">
             </form>
         </td>
