fixed filter "newest"

--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -648,9 +648,9 @@
                                 <ul>
                                     <li><a href="/games">Все</a></label></li>
                                     <li>
-                                        <form action="/games/newer"><label><a>
+                                        <form action="/games/newest"><label><a>
                                             <button type="submit">Новинки</button>
-                                            <input type="text" hidden name="date" value="01.01.2020"></a></label></form>
+                                            <input type="text" hidden name="date" value="2018-01-01"></a></label></form>
                                     </li>
                                     <li>
                                         <form action="/games/sort-by-score"><label><a>
